# TheFoolEngine

./: CMakeCache_.txt  CMakeLists.txt  CMakePresets.json  Card.cpp  Card.h  CardSet.h  Deck.cpp  Deck.h  Player.cpp  Player.h  README.md  Table.cpp  TheFoolEngine.cpp
doc/example/: strategy_loose_count.cpp
include/: CMakeLists.txt  Card.h  CardSet.h  Deck.h  Player.h  Table.h
src/: CMakeLists.txt  Card.cpp  ComputerPlayer.cpp  Deck.cpp  EGreedyComputer.cpp  GreedyComputer.cpp  HeuristicsComputer.cpp  HumanPlayer.cpp  Player.cpp  RandomComputer.cpp  Table.cpp
